[package]
name = "libhydrogen-sys"
version = "0.9.0"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Low-level bindings for the Hydrogen cryptography library"
license = "ISC"
homepage = "https://libhydrogen.org"
repository = "https://github.com/jedisct1/rust-libhydrogen-sys"
edition = "2018"

build = "build.rs"

[build-dependencies]
bindgen = ">= 0.53"
cc = "1.0"
